# opengl-compute-shaders

./: CMakeLists.txt  README.md  build.sh  compute_shader.comp  run_cpp.sh  run_simple.sh
basic_example/: simple_compute_example.cpp
cpp_example/: buffer.cpp  libs.hpp  main.cpp  program.cpp  shader.cpp  simple_gl.hpp  simple_gl_impl.hpp
